# agentic_indexer

./: .gitignore  README.md  pyproject.toml  requirements.txt
_smoke_test/: maintenance_audit_2026-04-29.md
docs/: agent_usage.md  architecture.md  validation.md
src/moodle_indexer/: __init__.py  __main__.py  agent_safety.py  cli.py  components.py  config.py  errors.py  extractors.py  file_roles.py  indexer.py  js_modules.py  json_output.py  models.py  paths.py  php_parser.py  progress.py  queries.py  runtime_contract.py  scanner.py  store.py  subplugins.py  suggestions.py
src/moodle_indexer/contracts/: runtime_outer_schema_v1.json
tests/: conftest.py  test_agent_workflows.py  test_cli.py  test_cli_agent_workflows.py  test_components.py  test_indexer.py  test_runtime_contract.py
tests/fixtures/hosting_wrapper/lib/classes/: some_core_class.php
tests/fixtures/hosting_wrapper/public/mod/assign/: version.php
tests/fixtures/hosting_wrapper/public/mod/forum/: lib.php
tests/fixtures/moodle_sample/admin/amd/src/: plugin_management_table.js
tests/fixtures/moodle_sample/admin/tool/capability/: settings.php
tests/fixtures/moodle_sample/admin/tool/demo/: settings.php
tests/fixtures/moodle_sample/admin/tool/mfa/: settings.php
tests/fixtures/moodle_sample/ai/amd/src/: aiprovider_action_management_table.js  local_actions.js
tests/fixtures/moodle_sample/ai/classes/: provider.php
tests/fixtures/moodle_sample/ai/classes/form/: action_settings_form.php
tests/fixtures/moodle_sample/lib/: adminlib.php  externallib.php  formslib.php  moodlelib.php
tests/fixtures/moodle_sample/mod/assign/: externallib.php  locallib.php  renderer.php
tests/fixtures/moodle_sample/mod/demo/: locallib.php
tests/fixtures/moodle_sample/mod/forum/: lib.php  locallib.php  renderer.php  version.php
(+48 files in other folders)
