[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-ai-indexer"
version = "0.1.0"
description = "Phase 1 AI-friendly code indexer for local Moodle LMS checkouts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "phply>=1.2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
moodle-indexer = "moodle_indexer.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moodle_indexer = ["contracts/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
